--- a/notebooks/00_molecule_representation.ipynb
+++ b/notebooks/00_molecule_representation.ipynb
@@ -5,9 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-09-04T11:48:46.924976Z",
-     "start_time": "2025-09-04T11:48:46.841564Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -21,29 +20,8 @@
     "\n",
     "df.info()"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10343 entries, 0 to 10342\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column   Non-Null Count  Dtype  \n",
-      "---  ------   --------------  -----  \n",
-      " 0   SMILES   10343 non-null  object \n",
-      " 1   id       7973 non-null   float64\n",
-      " 2   Tg       557 non-null    float64\n",
-      " 3   FFV      7892 non-null   float64\n",
-      " 4   Tc       866 non-null    float64\n",
-      " 5   Density  613 non-null    float64\n",
-      " 6   Rg       614 non-null    float64\n",
-      "dtypes: float64(6), object(1)\n",
-      "memory usage: 565.8+ KB\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
@@ -139,7 +117,6 @@
     "# 중요도를 데이터프레임으로 만들어 정렬\n",
     "importance_df = pd.DataFrame({'Feature': feature_names, 'Importance': importances})\n",
     "importance_df = importance_df.sort_values(by='Importance', ascending=False)\n",
-    "\n",
     "\n",
     "# --- 4. 결과 시각화 ---\n",
     "print(\"피처 중요도를 시각화하는 중입니다...\")\n",
