--- a/notebooks/02_GNN_baseline.ipynb
+++ b/notebooks/02_GNN_baseline.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-09-07T13:01:15.340306Z",
-     "start_time": "2025-09-07T13:01:08.624577Z"
+     "end_time": "2025-09-07T15:21:16.315041Z",
+     "start_time": "2025-09-07T15:21:00.595807Z"
     }
    },
    "source": [
@@ -47,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T13:02:53.793653Z",
-     "start_time": "2025-09-07T13:02:37.192739Z"
+     "end_time": "2025-09-07T15:21:57.147092Z",
+     "start_time": "2025-09-07T15:21:43.556854Z"
     }
    },
    "cell_type": "code",
@@ -66,21 +66,23 @@
      "text": [
       "--- 5단계 시작: GNN 데이터셋 준비 ---\n",
       "대상 물성: ['Tg', 'FFV', 'Tc', 'Density', 'Rg']\n",
+      "물성 데이터를 정규화했습니다.\n",
       "SMILES를 그래프 데이터로 변환 중... (시간이 걸릴 수 있습니다)\n",
       "그래프 변환 완료. 총 10343개의 유효한 분자 데이터 생성.\n",
+      "처리된 데이터셋과 스케일러가 'E:/SSL-polyGNN/data/processed/'에 저장되었습니다.\n",
       "\n",
       "--- 5단계 완료 ---\n",
       "처리된 데이터셋이 'E:/SSL-polyGNN/data/processed/gnn_dataset.pt'에 저장되었습니다.\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-07T13:43:57.253247Z",
-     "start_time": "2025-09-07T13:03:28.899452Z"
+     "end_time": "2025-09-07T16:00:05.826186Z",
+     "start_time": "2025-09-07T15:22:18.479252Z"
     }
    },
    "cell_type": "code",
@@ -101,90 +103,93 @@
       "사용 장치: cuda\n",
       "\n",
       "===== Fold 1/5 =====\n",
-      "Epoch 001 | Train Loss: 2430.7221 | Val Loss: 1217.2559\n",
-      "Epoch 010 | Train Loss: 972.9030 | Val Loss: 786.5198\n",
-      "Epoch 020 | Train Loss: 906.1099 | Val Loss: 714.5302\n",
-      "Epoch 030 | Train Loss: 866.0552 | Val Loss: 685.7071\n",
-      "Epoch 040 | Train Loss: 812.4205 | Val Loss: 656.8478\n",
-      "Epoch 050 | Train Loss: 798.6108 | Val Loss: 652.9719\n",
-      "Epoch 060 | Train Loss: 776.2268 | Val Loss: 690.1607\n",
-      "Epoch 070 | Train Loss: 760.3277 | Val Loss: 609.2947\n",
-      "Epoch 080 | Train Loss: 741.0899 | Val Loss: 594.0068\n",
-      "Epoch 090 | Train Loss: 750.9163 | Val Loss: 606.0130\n",
-      "Epoch 100 | Train Loss: 727.1239 | Val Loss: 574.3458\n",
-      "Fold 1 최적 Val Loss: 573.4292\n",
+      "Epoch 001 | Train Loss: 0.7365 | Val Loss: 0.5976\n",
+      "Epoch 010 | Train Loss: 0.5007 | Val Loss: 0.3972\n",
+      "Epoch 020 | Train Loss: 0.4508 | Val Loss: 0.3454\n",
+      "Epoch 030 | Train Loss: 0.4410 | Val Loss: 0.3287\n",
+      "Epoch 040 | Train Loss: 0.4191 | Val Loss: 0.3159\n",
+      "Epoch 050 | Train Loss: 0.4091 | Val Loss: 0.3181\n",
+      "Epoch 060 | Train Loss: 0.4013 | Val Loss: 0.3285\n",
+      "Epoch 070 | Train Loss: 0.3975 | Val Loss: 0.3049\n",
+      "Epoch 080 | Train Loss: 0.3891 | Val Loss: 0.2997\n",
+      "Epoch 090 | Train Loss: 0.3798 | Val Loss: 0.2946\n",
+      "Epoch 100 | Train Loss: 0.3825 | Val Loss: 0.2905\n",
+      "Fold 1 최적 Val Loss: 0.2905\n",
       "\n",
       "===== Fold 2/5 =====\n",
-      "Epoch 001 | Train Loss: 2429.3624 | Val Loss: 1321.4793\n",
-      "Epoch 010 | Train Loss: 1020.8406 | Val Loss: 866.0327\n",
-      "Epoch 020 | Train Loss: 947.6723 | Val Loss: 679.1697\n",
-      "Epoch 030 | Train Loss: 872.3544 | Val Loss: 676.3289\n",
-      "Epoch 040 | Train Loss: 842.8516 | Val Loss: 687.0255\n",
-      "Epoch 050 | Train Loss: 820.6881 | Val Loss: 619.3565\n",
-      "Epoch 060 | Train Loss: 791.0401 | Val Loss: 590.6459\n",
-      "Epoch 070 | Train Loss: 778.1514 | Val Loss: 641.9569\n",
-      "Epoch 080 | Train Loss: 767.1188 | Val Loss: 567.6318\n",
-      "Epoch 090 | Train Loss: 769.9168 | Val Loss: 560.6390\n",
-      "Epoch 100 | Train Loss: 755.4696 | Val Loss: 581.8781\n",
-      "Fold 2 최적 Val Loss: 558.9666\n",
+      "Epoch 001 | Train Loss: 0.7423 | Val Loss: 0.6420\n",
+      "Epoch 010 | Train Loss: 0.4835 | Val Loss: 0.4185\n",
+      "Epoch 020 | Train Loss: 0.4423 | Val Loss: 0.3783\n",
+      "Epoch 030 | Train Loss: 0.4227 | Val Loss: 0.3471\n",
+      "Epoch 040 | Train Loss: 0.4066 | Val Loss: 0.3397\n",
+      "Epoch 050 | Train Loss: 0.3929 | Val Loss: 0.3219\n",
+      "Epoch 060 | Train Loss: 0.3841 | Val Loss: 0.3149\n",
+      "Epoch 070 | Train Loss: 0.3781 | Val Loss: 0.3107\n",
+      "Epoch 080 | Train Loss: 0.3738 | Val Loss: 0.3088\n",
+      "Epoch 090 | Train Loss: 0.3709 | Val Loss: 0.3029\n",
+      "Epoch 100 | Train Loss: 0.3660 | Val Loss: 0.2966\n",
+      "Fold 2 최적 Val Loss: 0.2901\n",
       "\n",
       "===== Fold 3/5 =====\n",
-      "Epoch 001 | Train Loss: 2345.1212 | Val Loss: 1073.3123\n",
-      "Epoch 010 | Train Loss: 1011.3439 | Val Loss: 798.2542\n",
-      "Epoch 020 | Train Loss: 898.0718 | Val Loss: 691.8176\n",
-      "Epoch 030 | Train Loss: 889.3942 | Val Loss: 711.1180\n",
-      "Epoch 040 | Train Loss: 827.8062 | Val Loss: 651.2851\n",
-      "Epoch 050 | Train Loss: 830.4036 | Val Loss: 607.8961\n",
-      "Epoch 060 | Train Loss: 786.8210 | Val Loss: 619.7318\n",
-      "Epoch 070 | Train Loss: 779.1778 | Val Loss: 577.9314\n",
-      "Epoch 080 | Train Loss: 762.6261 | Val Loss: 574.9223\n",
-      "Epoch 090 | Train Loss: 759.2862 | Val Loss: 561.0898\n",
-      "Epoch 100 | Train Loss: 764.0285 | Val Loss: 621.1198\n",
-      "Fold 3 최적 Val Loss: 560.8367\n",
+      "Epoch 001 | Train Loss: 0.7468 | Val Loss: 0.6318\n",
+      "Epoch 010 | Train Loss: 0.4796 | Val Loss: 0.4476\n",
+      "Epoch 020 | Train Loss: 0.4412 | Val Loss: 0.4048\n",
+      "Epoch 030 | Train Loss: 0.4257 | Val Loss: 0.3822\n",
+      "Epoch 040 | Train Loss: 0.4140 | Val Loss: 0.3715\n",
+      "Epoch 050 | Train Loss: 0.4019 | Val Loss: 0.3571\n",
+      "Epoch 060 | Train Loss: 0.3934 | Val Loss: 0.3426\n",
+      "Epoch 070 | Train Loss: 0.3839 | Val Loss: 0.3404\n",
+      "Epoch 080 | Train Loss: 0.3782 | Val Loss: 0.3430\n",
+      "Epoch 090 | Train Loss: 0.3754 | Val Loss: 0.3333\n",
+      "Epoch 100 | Train Loss: 0.3713 | Val Loss: 0.3269\n",
+      "Fold 3 최적 Val Loss: 0.3150\n",
       "\n",
       "===== Fold 4/5 =====\n",
-      "Epoch 001 | Train Loss: 2464.6222 | Val Loss: 1193.0242\n",
-      "Epoch 010 | Train Loss: 992.5659 | Val Loss: 803.5511\n",
-      "Epoch 020 | Train Loss: 910.3318 | Val Loss: 714.7223\n",
-      "Epoch 030 | Train Loss: 845.4173 | Val Loss: 667.9074\n",
-      "Epoch 040 | Train Loss: 819.0512 | Val Loss: 713.7782\n",
-      "Epoch 050 | Train Loss: 804.6762 | Val Loss: 628.7871\n",
-      "Epoch 060 | Train Loss: 786.3260 | Val Loss: 619.0844\n",
-      "Epoch 070 | Train Loss: 779.1329 | Val Loss: 606.0522\n",
-      "Epoch 080 | Train Loss: 746.0546 | Val Loss: 709.7017\n",
-      "Epoch 090 | Train Loss: 742.4810 | Val Loss: 607.0182\n",
-      "Epoch 100 | Train Loss: 718.5894 | Val Loss: 611.7136\n",
-      "Fold 4 최적 Val Loss: 579.6042\n",
+      "Epoch 001 | Train Loss: 0.7316 | Val Loss: 0.6135\n",
+      "Epoch 010 | Train Loss: 0.4938 | Val Loss: 0.4120\n",
+      "Epoch 020 | Train Loss: 0.4597 | Val Loss: 0.3919\n",
+      "Epoch 030 | Train Loss: 0.4325 | Val Loss: 0.3640\n",
+      "Epoch 040 | Train Loss: 0.4245 | Val Loss: 0.3457\n",
+      "Epoch 050 | Train Loss: 0.4181 | Val Loss: 0.3322\n",
+      "Epoch 060 | Train Loss: 0.4081 | Val Loss: 0.3387\n",
+      "Epoch 070 | Train Loss: 0.4005 | Val Loss: 0.3311\n",
+      "Epoch 080 | Train Loss: 0.3971 | Val Loss: 0.3233\n",
+      "Epoch 090 | Train Loss: 0.3925 | Val Loss: 0.3159\n",
+      "Epoch 100 | Train Loss: 0.3858 | Val Loss: 0.3093\n",
+      "Fold 4 최적 Val Loss: 0.2952\n",
       "\n",
       "===== Fold 5/5 =====\n",
-      "Epoch 001 | Train Loss: 2344.0724 | Val Loss: 1218.2163\n",
-      "Epoch 010 | Train Loss: 933.8039 | Val Loss: 818.2885\n",
-      "Epoch 020 | Train Loss: 827.3604 | Val Loss: 707.5785\n",
-      "Epoch 030 | Train Loss: 810.4577 | Val Loss: 738.1710\n",
-      "Epoch 040 | Train Loss: 786.9163 | Val Loss: 675.9372\n",
-      "Epoch 050 | Train Loss: 771.9661 | Val Loss: 630.4320\n",
-      "Epoch 060 | Train Loss: 753.0398 | Val Loss: 650.0784\n",
-      "Epoch 070 | Train Loss: 738.4397 | Val Loss: 653.8877\n",
-      "Epoch 080 | Train Loss: 730.1742 | Val Loss: 623.7568\n",
-      "Epoch 090 | Train Loss: 715.4326 | Val Loss: 593.1729\n",
-      "Epoch 100 | Train Loss: 721.8437 | Val Loss: 597.3622\n",
-      "Fold 5 최적 Val Loss: 590.6289\n",
+      "Epoch 001 | Train Loss: 0.7446 | Val Loss: 0.5822\n",
+      "Epoch 010 | Train Loss: 0.5040 | Val Loss: 0.4029\n",
+      "Epoch 020 | Train Loss: 0.4610 | Val Loss: 0.3594\n",
+      "Epoch 030 | Train Loss: 0.4464 | Val Loss: 0.3403\n",
+      "Epoch 040 | Train Loss: 0.4323 | Val Loss: 0.3475\n",
+      "Epoch 050 | Train Loss: 0.4284 | Val Loss: 0.3345\n",
+      "Epoch 060 | Train Loss: 0.4164 | Val Loss: 0.3232\n",
+      "Epoch 070 | Train Loss: 0.4076 | Val Loss: 0.3020\n",
+      "Epoch 080 | Train Loss: 0.4018 | Val Loss: 0.3022\n",
+      "Epoch 090 | Train Loss: 0.3970 | Val Loss: 0.3021\n",
+      "Epoch 100 | Train Loss: 0.3857 | Val Loss: 0.2800\n",
+      "Fold 5 최적 Val Loss: 0.2800\n",
       "\n",
       "--- 6단계 완료 ---\n",
       "K-Fold 교차 검증 결과 (MSE Loss):\n",
-      "  평균: 572.6931\n",
-      "  표준편차: 11.8236\n",
+      "  평균: 0.2941\n",
+      "  표준편차: 0.0115\n",
       "최적 모델들이 'model/' 디렉토리에 저장되었습니다.\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-07T16:12:17.039652Z",
+     "start_time": "2025-09-07T16:12:15.266622Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# In[4]: Cell 4 - (선택 사항) 학습된 모델로 예측해보기\n",
     "import torch\n",
@@ -225,7 +230,83 @@
     "for name, val in zip(properties, prediction.squeeze().cpu().numpy()):\n",
     "    print(f\"  - {name}: {val:.4f}\")"
    ],
-   "id": "85aa0e15707b2f07"
+   "id": "85aa0e15707b2f07",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SMILES 'CCO'의 예측 물성값:\n",
+      "  - Density: -0.8016\n",
+      "  - FFV: 0.6726\n",
+      "  - Rg: -0.3730\n",
+      "  - Tc: -0.4515\n",
+      "  - Tg: -0.9240\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-07T16:18:04.215004Z",
+     "start_time": "2025-09-07T16:18:04.004733Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# In[1]: Cell 1 - 필요한 모듈 및 경로 설정\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# WorkFrame 폴더의 경로를 추가하여 스텝별 스크립트를 import 할 수 있도록 함\n",
+    "# 이 노트북 파일이 'root/notebooks/'에 있다고 가정\n",
+    "workframe_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'WorkFrame'))\n",
+    "if workframe_path not in sys.path:\n",
+    "    sys.path.append(workframe_path)\n",
+    "\n",
+    "import run_step7_create_submission as step7\n",
+    "step7.main()"
+   ],
+   "id": "a66edbd934f55c81",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 7단계 시작: 최종 제출 파일 생성 ---\n",
+      "사용 장치: cuda\n",
+      "성공적으로 5개의 모델을 불러왔습니다.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 3/3 [00:00<00:00, 25.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예측값을 원래 스케일로 복원했습니다.\n",
+      "\n",
+      "--- 7단계 완료 ---\n",
+      "최종 제출 파일이 'submission.csv'에 성공적으로 저장되었습니다.\n",
+      "Kaggle에 제출하여 성능을 확인해보세요!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
