commit from desktop

--- a/notebooks/01_XGboost_baseline.ipynb
+++ b/notebooks/01_XGboost_baseline.ipynb
@@ -15,10 +15,10 @@
     "import yaml\n",
     "\n",
     "# 각 단계별 실행 스크립트를 불러옵니다.\n",
-    "from WorkFrame import run_step1_initial_importance as step1\n",
-    "from WorkFrame import run_step2_correlation_filter as step2\n",
-    "from WorkFrame import run_step3_final_selection as step3\n",
-    "from WorkFrame import run_step4_impute_values as step4\n",
+    "from BaseLine import run_step1_initial_importance as step1\n",
+    "from BaseLine import run_step2_correlation_filter as step2\n",
+    "from BaseLine import run_step3_final_selection as step3\n",
+    "from BaseLine import run_step4_impute_values as step4\n",
     "\n",
     "with open(\"E:/SSL-polyGNN/configs/default.yaml\", 'r', encoding=\"utf-8\") as f:\n",
     "    config = yaml.safe_load(f)\n",
