--- a/notebooks/02_GNN_baseline.ipynb
+++ b/notebooks/02_GNN_baseline.ipynb
@@ -1,50 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-09-07T15:21:16.315041Z",
-     "start_time": "2025-09-07T15:21:00.595807Z"
-    }
-   },
-   "source": [
-    "# In[1]: Cell 1 - 필요한 모듈 및 경로 설정\n",
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "# WorkFrame 폴더의 경로를 추가하여 스텝별 스크립트를 import 할 수 있도록 함\n",
-    "# 이 노트북 파일이 'root/notebooks/'에 있다고 가정\n",
-    "workframe_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'WorkFrame'))\n",
-    "if workframe_path not in sys.path:\n",
-    "    sys.path.append(workframe_path)\n",
-    "\n",
-    "import run_step5_prepare_gnn_data as step5\n",
-    "import run_step6_train_gnn_model as step6"
-   ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:68: UserWarning: An issue occurred while importing 'pyg-lib'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
-      "  warnings.warn(f\"An issue occurred while importing 'pyg-lib'. \"\n",
-      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:86: UserWarning: An issue occurred while importing 'torch-scatter'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
-      "  warnings.warn(f\"An issue occurred while importing 'torch-scatter'. \"\n",
-      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:97: UserWarning: An issue occurred while importing 'torch-cluster'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
-      "  warnings.warn(f\"An issue occurred while importing 'torch-cluster'. \"\n",
-      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:113: UserWarning: An issue occurred while importing 'torch-spline-conv'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
-      "  warnings.warn(\n",
-      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:124: UserWarning: An issue occurred while importing 'torch-sparse'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
-      "  warnings.warn(f\"An issue occurred while importing 'torch-sparse'. \"\n"
-     ]
-    }
-   ],
-   "execution_count": 1
-  },
-  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-09-07T15:21:57.147092Z",
@@ -260,9 +216,9 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "# WorkFrame 폴더의 경로를 추가하여 스텝별 스크립트를 import 할 수 있도록 함\n",
+    "# BaseLine 폴더의 경로를 추가하여 스텝별 스크립트를 import 할 수 있도록 함\n",
     "# 이 노트북 파일이 'root/notebooks/'에 있다고 가정\n",
-    "workframe_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'WorkFrame'))\n",
+    "workframe_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'BaseLine'))\n",
     "if workframe_path not in sys.path:\n",
     "    sys.path.append(workframe_path)\n",
     "\n",
@@ -307,6 +263,50 @@
     }
    ],
    "execution_count": 2
+  },
+  {
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-09-07T15:21:16.315041Z",
+     "start_time": "2025-09-07T15:21:00.595807Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:68: UserWarning: An issue occurred while importing 'pyg-lib'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
+      "  warnings.warn(f\"An issue occurred while importing 'pyg-lib'. \"\n",
+      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:86: UserWarning: An issue occurred while importing 'torch-scatter'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
+      "  warnings.warn(f\"An issue occurred while importing 'torch-scatter'. \"\n",
+      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:97: UserWarning: An issue occurred while importing 'torch-cluster'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
+      "  warnings.warn(f\"An issue occurred while importing 'torch-cluster'. \"\n",
+      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:113: UserWarning: An issue occurred while importing 'torch-spline-conv'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
+      "  warnings.warn(\n",
+      "E:\\pyspace\\envs\\polygnn\\Lib\\site-packages\\torch_geometric\\typing.py:124: UserWarning: An issue occurred while importing 'torch-sparse'. Disabling its usage. Stacktrace: [WinError 127] 지정된 프로시저를 찾을 수 없습니다\n",
+      "  warnings.warn(f\"An issue occurred while importing 'torch-sparse'. \"\n"
+     ]
+    }
+   ],
+   "execution_count": 1,
+   "source": [
+    "# In[1]: Cell 1 - 필요한 모듈 및 경로 설정\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# BaseLine 폴더의 경로를 추가하여 스텝별 스크립트를 import 할 수 있도록 함\n",
+    "# 이 노트북 파일이 'root/notebooks/'에 있다고 가정\n",
+    "workframe_path = os.path.abspath(os.path.join(os.getcwd(), '..', 'BaseLine'))\n",
+    "if workframe_path not in sys.path:\n",
+    "    sys.path.append(workframe_path)\n",
+    "\n",
+    "import run_step5_prepare_gnn_data as step5\n",
+    "import run_step6_train_gnn_model as step6"
+   ],
+   "id": "initial_id"
   }
  ],
  "metadata": {
